[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8_base = "0.2"
clap = { version = "3.1.6", features = ["derive", "cargo"] }
env_logger = "0.11.3"
log = "0.4.22"
rand = "0.8.5"
